# dbt-duckdb-clickbench

./: .gitignore  Makefile  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml
macros/: to_datetime.sql
models/benchmarks/clickbench/: mart_clickbench__q01_total_hits_fct.sql  mart_clickbench__q06_distinct_search_phrases_fct.sql  mart_clickbench__q10_region_rollup_fct.sql  mart_clickbench__q11_mobile_model_unique_users_fct.sql  mart_clickbench__q15_search_engine_phrase_counts_fct.sql  mart_clickbench__q16_user_activity_top_fct.sql  mart_clickbench__q18_user_phrase_counts_sample_fct.sql  mart_clickbench__q19_user_minute_phrase_counts_fct.sql  mart_clickbench__q21_google_url_hits_fct.sql  mart_clickbench__q22_google_phrase_urls_fct.sql  mart_clickbench__q23_non_google_title_phrase_fct.sql  mart_clickbench__q25_search_phrase_by_event_time_fct.sql  mart_clickbench__q30_resolution_width_progression_fct.sql  mart_clickbench__q31_search_engine_client_ip_metrics_fct.sql  mart_clickbench__q33_watch_client_all_hits_fct.sql  mart_clickbench__q37_counter62_url_pageviews_fct.sql  mart_clickbench__q38_counter62_title_pageviews_fct.sql  mart_clickbench__q40_counter62_traffic_paths_offset_fct.sql  mart_clickbench__q41_counter62_urlhash_timeseries_fct.sql  mart_clickbench__q42_counter62_window_client_dimensions_fct.sql  (+1 more)
models/marts/incremental/: microbatch_ukey.sql  (+3 more)
models/results/: results__clickbench.sql  results__incremental.sql  results__microbatch.sql
models/staging/: _models.yml  source.yml  stg_clickbench__hits.sql  stg_clickbench__hits_vw.sql
(+34 files in other folders)
